# udacity-landmark-classification-tagging

./: .gitignore  README.md  RESULTS_ANALYSIS.md  app.html  app.ipynb  cnn_from_scratch.html  cnn_from_scratch.ipynb  landmark.html  landmark.ipynb  pyproject.toml  requirements.txt  transfer_learning.html  transfer_learning.ipynb
landmark/: __init__.py  analysis.py  augmentation.py  cli.py  data.py  evaluate.py  models.py  optim.py  predict.py  save.py  train.py
results/: scratch_cnn__flip-crop__adam__cosine__1ep.json  scratch_cnn__flip-crop__adamw__cosine__20ep.json  scratch_cnn__flip-crop__adamw__warmup-cosine__20ep.json  scratch_cnn__mixup__adamw__cosine__20ep.json  scratch_cnn__mixup__adamw__warmup-cosine__20ep.json  scratch_cnn__randaug__adamw__cosine__20ep.json  scratch_cnn__randaug__adamw__warmup-cosine__20ep.json  tl_convnext__flip-crop__adamw__cosine__20ep.json  tl_convnext__flip-crop__adamw__warmup-cosine__20ep.json  tl_convnext__mixup__adamw__cosine__20ep.json  tl_convnext__mixup__adamw__warmup-cosine__20ep.json  tl_convnext__randaug__adamw__cosine__20ep.json  tl_convnext__randaug__adamw__warmup-cosine__20ep.json  tl_efficientnet__flip-crop__adamw__cosine__20ep.json  tl_efficientnet__flip-crop__adamw__warmup-cosine__20ep.json  tl_efficientnet__mixup__adamw__cosine__20ep.json  tl_efficientnet__mixup__adamw__warmup-cosine__20ep.json  tl_efficientnet__randaug__adamw__cosine__20ep.json  tl_efficientnet__randaug__adamw__warmup-cosine__20ep.json  tl_ijepa__flip-crop__adamw__cosine__20ep.json  tl_ijepa__mixup__adamw__cosine__20ep.json  (+16 more)
src/: create_submit_pkg.py  (+11 more)
