[project]
name = "nd101-landmark-classification"
version = "0.1.0"
description = "Landmark classification — scratch + transfer learning + I-JEPA across an experiment matrix"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.0",
    "torch>=2.11.0,<2.12.0",
    "torchvision>=0.26.0,<0.27.0",
    "timm>=1.0.27",
    "nbconvert>=7.17.1",
]

[project.scripts]
landmark = "landmark.cli:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["landmark"]
